# GUTTURIDENTIFY

./: BufferSocket.qml  CMakeLists.txt  CaseBook.qml  Main.qml  README.md  UserLoad.qml  main.cpp  pic.qrc
